tests/spec/build/snapshots/iterate_enum_export_name_consistency.snap
---
source: tests/spec/build/mod.rs
---
// === main.go ===
package main

func MakePublicPhaseBuild() PublicPhase {
	return PublicPhase{Tag: PublicPhaseBuild}
}

func MakeLocalPhaseCheck() LocalPhase {
	return LocalPhase{Tag: LocalPhaseCheck}
}

type PublicPhaseTag uint8

const (
	PublicPhaseBuild PublicPhaseTag = iota
)

type PublicPhase struct {
	Tag PublicPhaseTag
}

func PublicPhase_Variants() []PublicPhase {
	return []PublicPhase{
		{Tag: PublicPhaseBuild},
	}
}

type LocalPhaseTag uint8

const (
	LocalPhaseCheck LocalPhaseTag = iota
)

type LocalPhase struct {
	Tag LocalPhaseTag
}

func LocalPhase_Variants() []LocalPhase {
	return []LocalPhase{
		{Tag: LocalPhaseCheck},
	}
}

func main() {
	LocalPhase_Variants()
	PublicPhase_Variants()
}
