tests/spec/build/snapshots/iterate_enum_named_go_keyword.snap
---
source: tests/spec/build/mod.rs
---
// === main.go ===
package main

func Makemap_A() map_ {
	return map_{Tag: mapA}
}

func Makemap_B() map_ {
	return map_{Tag: mapB}
}

type mapTag uint8

const (
	mapA mapTag = iota
	mapB
)

type map_ struct {
	Tag mapTag
}

func map_variants() []map_ {
	return []map_{
		{Tag: mapA},
		{Tag: mapB},
	}
}

func main() {
	map_variants()
}
