tests/spec/build/snapshots/json_enum_coexists_with_private_json_function.snap
---
source: tests/spec/build/mod.rs
---
// === main.go ===
package main

import (
	"encoding/json"
	"errors"
	"fmt"
)

func MakeStatusReady() Status {
	return Status{Tag: StatusReady}
}

type StatusTag uint8

const (
	StatusReady StatusTag = iota
)

type Status struct {
	Tag StatusTag
}

func (s Status) MarshalJSON() ([]byte, error) {
	switch s.Tag {
	case StatusReady:
		return json.Marshal("Ready")
	default:
		return nil, fmt.Errorf("unknown Status tag: %d", s.Tag)
	}
}

func (s *Status) UnmarshalJSON(data []byte) error {
	var name string
	if err := json.Unmarshal(data, &name); err != nil {
		return errors.New("invalid Status JSON: expected string")
	}
	switch name {
	case "Ready":
		s.Tag = StatusReady
		return nil
	default:
		return fmt.Errorf("unknown Status variant: %s", name)
	}
}

func json_() int {
	return 1
}

func main() {
	_ = MakeStatusReady()
	json_()
}
