tests/spec/build/snapshots/lisette_cased_error_method_promotes_to_go_exported.snap
---
source: tests/spec/build/mod.rs
---
// === main.go ===
package main

import "fmt"

type MyErr struct {
	msg string
}

func (m MyErr) Error() string {
	return "ERR: " + m.msg
}

func main() {
	e := MyErr{msg: "boom"}
	fmt.Println(e)
}
