tests/spec/build/snapshots/lisette_cased_go_stringer_method_promotes_to_go_exported.snap
---
source: tests/spec/build/mod.rs
---
// === main.go ===
package main

import "fmt"

type A struct {
	a string
}

func (a A) GoString() string {
	return "dbg_" + a.a
}

func main() {
	a := A{a: "x"}
	fmt.Printf("%#v\n", a)
}
