tests/spec/build/snapshots/lisette_cased_stringer_method_promotes_to_go_exported.snap
---
source: tests/spec/build/mod.rs
---
// === main.go ===
package main

import "fmt"

type A struct {
	a string
}

func (a A) String() string {
	return "lis_" + a.a
}

func main() {
	a := A{a: "x"}
	fmt.Println(a)
}
