tests/spec/build/snapshots/local_alias_cross_package_enum_struct_variant_tag.snap
---
source: tests/spec/build/mod.rs
---
// === lib/lib.go ===
package lib

func MakeEventClick(arg0 int) Event {
	return Event{Tag: EventClick, X: arg0}
}

type EventTag uint8

const (
	EventClick EventTag = iota
)

type Event struct {
	Tag EventTag
	X   int
}


// === main.go ===
package main

import "github.com/user/myproject/lib"

type Alias = lib.Event

func main() {
	e := lib.Event{
		Tag: lib.EventClick,
		X:   1,
	}
	_ = e
}
