tests/spec/build/snapshots/lowered_partial_fn_arg_adapts_to_tagged_generic_param.snap
---
source: tests/spec/build/mod.rs
---
// === main.go ===
package main

import lisette "github.com/ivov/lisette/prelude"

type Face interface {
}

func Fallible(arg int) (int, Face) {
	return arg, nil
}

func Resolve[T any, R any, E any](a T, f func(T) lisette.Partial[R, E]) lisette.Partial[R, E] {
	return f(a)
}

func main() {
	cb := Fallible
	Resolve(42, func(arg0 int) lisette.Partial[int, Face] {
		ret, ret_1 := cb(arg0)
		if ret_1 != nil {
			return lisette.MakePartialBoth[int, Face](ret, ret_1)
		}
		return lisette.MakePartialOk[int, Face](ret)
	})
}
