tests/spec/build/snapshots/lowered_pointer_err_fn_arg_adapts_to_tagged_generic_param.snap
---
source: tests/spec/build/mod.rs
---
// === main.go ===
package main

import (
	lisette "github.com/ivov/lisette/prelude"
	"strconv"
)

func Parser(arg int) (int, *strconv.NumError) {
	return arg, nil
}

func Resolve[T any, R any, E any](a T, f func(T) lisette.Result[R, E]) lisette.Result[R, E] {
	return f(a)
}

func main() {
	cb := Parser
	Resolve(0, func(arg0 int) lisette.Result[int, *strconv.NumError] {
		ret, ret_1 := cb(arg0)
		if ret_1 != nil {
			return lisette.MakeResultErr[int, *strconv.NumError](ret_1)
		}
		return lisette.MakeResultOk[int, *strconv.NumError](ret)
	})
}
